--- a/sdk/ml/azure-ai-ml/tests/test_configs/compute/compute-aml.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/compute/compute-aml.yaml
@@ -2,6 +2,7 @@ name: banchaml
 type: amlcompute
 description: some_desc_aml
 size: Standard_DS2_v2
+location: westus
 ssh_public_access_enabled: true
 ssh_settings:
    admin_username: azureuser
