--- a/sdk/recoveryservices/azure-mgmt-recoveryservicesbackup/sdk_packaging.toml
+++ b/sdk/recoveryservices/azure-mgmt-recoveryservicesbackup/sdk_packaging.toml
@@ -7,3 +7,4 @@ is_stable = false
 is_arm = true
 sample_link = "recoveryservicesbackup"
 title = "RecoveryServicesBackupClient"
+sub_namespace = "activestamp"
