--- a/sdk/containerregistry/azure-containerregistry/mypy.ini
+++ b/sdk/containerregistry/azure-containerregistry/mypy.ini
@@ -5,7 +5,7 @@ ignore_missing_imports = True
 
 # Per-module options:
 
-[mypy-azure.appconfiguration._generated.*]
+[mypy-azure.containerregistry._generated.*]
 ignore_errors = True
 
 [mypy-azure.core.*]
