--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/hello_pipeline_job_with_registries.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/hello_pipeline_job_with_registries.yml
@@ -7,7 +7,8 @@ inputs:
   hello_string_top_level_input: "hello world"
 jobs:
   a:
-    component: azureml://registries/sdk-test/components/my_hello_world_asset/versions/1
+    component: azureml://registries/sdk-test/components/hello_world_asset/versions/1
+    # note that environment runtime overwrite is not supported for now
     environment: azureml://registries/sdk-test/environments/openMPIUbuntu/versions/1
   b:
     command: echo "world" >> ${{outputs.world_output}}/world.txt
