--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/job_with_registry_model_as_input/pipeline.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/job_with_registry_model_as_input/pipeline.yml
@@ -6,8 +6,8 @@ display_name: "e2e_registered_components_with_registry_model_as_pipeline_input"
 
 inputs:
   pipeline_score_model:
-    path: azureml://registries/testFeed/models/iris_model/versions/1
-    type: mlflow_model
+    path: azureml://registries/sdk-test/models/model-sample/versions/1
+    type: custom_model
   pipeline_job_test_input:
     path: ./data
 
@@ -31,8 +31,8 @@ jobs:
     compute: azureml:cpu-cluster
     inputs:
       model_input:
-        path: azureml://registries/testFeed/models/iris_model/versions/1
-        type: mlflow_model
+        path: azureml://registries/sdk-test/models/model-sample/versions/1
+        type: custom_model
       test_data: ${{parent.inputs.pipeline_job_test_input}}
     outputs:
       score_output:
@@ -40,7 +40,7 @@ jobs:
 
   score_job_with_registry_component:
     type: command
-    component: azureml://registries/testFeed/components/v2_dsl_score_component/versions/0.0.8
+    component: azureml://registries/sdk-test/components/score_component/versions/1
     compute: azureml:cpu-cluster
     inputs:
       model_input: ${{parent.inputs.pipeline_score_model}}
