--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -112,7 +112,7 @@ commands =
       -p {toxinidir} \
       -w {envtmpdir} \
       --package-type sdist
-    {envbindir}/python {toxinidir}/../../../eng/tox/run_pylint.py -t {toxinidir} --next
+    {envbindir}/python {toxinidir}/../../../eng/tox/run_pylint.py -t {toxinidir} --next=True
 
 [testenv:mypy]
 skipsdist = true
