--- a/sdk/scheduler/azure-mgmt-scheduler/sdk_packaging.toml
+++ b/sdk/scheduler/azure-mgmt-scheduler/sdk_packaging.toml
@@ -3,5 +3,5 @@ package_name = "azure-mgmt-scheduler"
 package_pprint_name = "Scheduler Management"
 package_doc_id = "scheduler"
 is_stable = true
-sample_link = "scheduler"
+sample_link = ""
 title = "SchedulerManagementClient"
