migrated tests to proxy

--- a/sdk/communication/azure-communication-sms/tests.yml
+++ b/sdk/communication/azure-communication-sms/tests.yml
@@ -19,4 +19,7 @@ stages:
               - $(sub-config-communication-int-test-resources-common)
               - $(sub-config-communication-int-test-resources-python)
       Clouds: Public,Int
+      EnvVars:
+        AZURE_SKIP_LIVE_RECORDING: 'True'
+        AZURE_TEST_RUN_LIVE: 'true'
 
