--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/none_pipeline_default_compute_invalid/pipeline_component.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/none_pipeline_default_compute_invalid/pipeline_component.yml
@@ -6,7 +6,9 @@ name: simple_pipeline_component
 jobs:
   vanilla_node:
     type: command
-    component: ../components/component.yml
+    component: ../component.yml
   node_with_resources:
     type: command
-    component: ../components/component_with_resources.yml
+    component: ../component.yml
+    resources:
+      instance_count: 2
