--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/serverless_pipeline_default_compute_valid/pipeline_component.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/serverless_compute/serverless_pipeline_default_compute_valid/pipeline_component.yml
@@ -6,19 +6,29 @@ name: simple_pipeline_component
 jobs:
   vanilla_node:
     type: command
-    component: ../components/component.yml
+    component: ../component.yml
   node_with_resources:
     type: command
-    component: ../components/component_with_resources.yml
+    component: ../component.yml
+    resources:
+      instance_count: 2
   node_with_compute_target:
     type: command
-    component: ../components/component.yml
+    component: ../component.yml
+    compute: azureml:cpu-cluster
   node_with_compute_target_and_resources:
     type: command
-    component: ../components/component_with_resources.yml
+    component: ../component.yml
+    compute: azureml:cpu-cluster
+    resources:
+      instance_count: 2
   serverless_node:
     type: command
-    component: ../components/component.yml
+    component: ../component.yml
+    compute: azureml:serverless
   serverless_node_with_resources:
     type: command
-    component: ../components/component_with_resources.yml
+    component: ../component.yml
+    compute: azureml:serverless
+    resources:
+      instance_count: 2
