--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_parallel_for_pipeline_job_output_name_version.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_parallel_for_pipeline_job_output_name_version.yaml
@@ -11,7 +11,7 @@ jobs:
 outputs:
   component_out_path:
     type: mltable
-    asset_name: a_output
-    asset_version: '1'
+    name: a_output
+    version: '1'
 settings:
   default_compute: azureml:cpu-cluster
