--- a/sdk/communication/azure-communication-sms/tests.yml
+++ b/sdk/communication/azure-communication-sms/tests.yml
@@ -14,7 +14,11 @@ stages:
             - $(sub-config-communication-services-cloud-test-resources-python)
           MatrixReplace:
             - TestSamples=.*/true
-      Clouds: Public
+        Int:
+            SubscriptionConfigurations:
+              - $(sub-config-communication-int-test-resources-common)
+              - $(sub-config-communication-int-test-resources-python)
+      Clouds: Public,Int
       EnvVars:
         AZURE_SKIP_LIVE_RECORDING: 'True'
         AZURE_TEST_RUN_LIVE: 'True'
