--- a/sdk/communication/azure-communication-sms/tests.yml
+++ b/sdk/communication/azure-communication-sms/tests.yml
@@ -9,6 +9,7 @@ stages:
       CloudConfig:
         Public:
           SubscriptionConfigurations:
+            - $(sub-config-azure-cloud-test-resources)
             - $(sub-config-communication-services-cloud-test-resources-common)
             - $(sub-config-communication-services-sms-cloud-test-resources)
           MatrixReplace:
