feat: support attr datatransfer in internal components

--- a/sdk/ml/azure-ai-ml/tests/test_configs/internal/command-component-serialization-core-case/component_spec.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/internal/command-component-serialization-core-case/component_spec.yaml
@@ -17,3 +17,5 @@ command: >-
   echo {inputs.input_float} && echo {inputs.delimiter}
 environment:
   name: AzureML-Designer
+datatransfer:
+  cloud_type: aether
