--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_node_output_name_version.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_node_output_name_version.yaml
@@ -1,4 +1,4 @@
-display_name: parallel_for_pipeline
+display_name: register_node_output
 type: pipeline
 jobs:
   parallel_body:
@@ -8,10 +8,12 @@ jobs:
         type: uri_file
         path: https://dprepdata.blob.core.windows.net/demo/Titanic.csv
     component: ../components/helloworld_component.yml
+    outputs:
+      component_out_path:
+        name: node_output
+        version: '1'
 outputs:
-  component_out_path:
-    type: mltable
-    name: a_output
-    version: '1'
+  pipeline_out_path:
+    type: uri_folder
 settings:
   default_compute: azureml:cpu-cluster
