--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -39,7 +39,6 @@ pkgs =
     wheel==0.37.0
     packaging==20.4
     urllib3==1.26.12
-    tomli==2.0.1
 
 
 [testenv]
@@ -95,6 +94,25 @@ commands =
       --package-type sdist
     {envbindir}/python {toxinidir}/../../../eng/tox/run_pylint.py -t {toxinidir}
 
+[testenv:next-pylint]
+skipsdist = true
+skip_install = true
+usedevelop = false
+changedir = {toxinidir}
+setenv =
+  {[testenv]setenv}
+  PROXY_URL=http://localhost:5002
+deps =
+  {[base]deps}
+commands =
+    {envbindir}/python -m pip install pylint==2.15.8
+    {envbindir}/python -m pip install pylint-guidelines-checker==0.0.7 --index-url="https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-python/pypi/simple/"
+    {envbindir}/python {toxinidir}/../../../eng/tox/create_package_and_install.py \
+      -d {distdir} \
+      -p {toxinidir} \
+      -w {envtmpdir} \
+      --package-type sdist
+    {envbindir}/python {toxinidir}/../../../eng/tox/run_pylint.py -t {toxinidir} --next=True
 
 [testenv:mypy]
 skipsdist = true
@@ -130,7 +148,7 @@ setenv =
   PROXY_URL=http://localhost:5018
 deps =
   {[base]deps}
-  pyright==1.1.287
+  pyright==1.1.274
 commands =
     {envbindir}/python {toxinidir}/../../../eng/tox/create_package_and_install.py \
       -d {distdir} \
@@ -149,7 +167,7 @@ setenv =
   PROXY_URL=http://localhost:5019
 deps =
   {[base]deps}
-  pyright==1.1.287
+  pyright==1.1.274
 commands =
     {envbindir}/python {toxinidir}/../../../eng/tox/run_verifytypes.py -t {toxinidir}
 
