--- a/eng/pipelines/templates/stages/archetype-sdk-tests.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-tests.yml
@@ -167,7 +167,7 @@ stages:
               inputs:
                 scriptPath: 'scripts/devops_tasks/setup_execute_tests.py'
                 arguments: >-
-                  "$(TargetingString)" 
+                  "azure*" 
                   --mark_arg="${{ parameters.TestMarkArgument }}" 
                   --service="${{ parameters.ServiceDirectory }}" 
                   --toxenv="next-pylint"
