--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -39,7 +39,7 @@ pkgs =
     wheel==0.37.0
     packaging==20.4
     urllib3==1.26.12
-
+    tomli==2.0.1  
 
 [testenv]
 ignore_args=--ignore=.tox --ignore=build --ignore=.eggs
