Add kwargs and type to Custom Applications

--- a/sdk/ml/azure-ai-ml/tests/test_configs/compute/compute-ci-custom-app.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/compute/compute-ci-custom-app.yaml
@@ -4,6 +4,7 @@ size: STANDARD_DS3_V2
 
 custom_applications:
     - name: rstudio-workbench
+      type: docker
       image:
         reference: ghcr.io/azure/rstudio-workbench:latest
       endpoints:
