--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/control_flow/do_while/invalid_pipeline.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/control_flow/do_while/invalid_pipeline.yml
@@ -56,6 +56,23 @@ jobs:
         - job_in_number_1
       output_in_path: job_in_path
 
+  empty_max_iteration_body:
+    type: pipeline
+    inputs:
+      job_in_number: ${{parent.inputs.job_in_number}}
+      job_in_number_1: ${{parent.inputs.job_in_number}}
+      job_in_path: ${{parent.inputs.job_in_path}}
+    component: ./components/do_while_body_pipeline_component.yml
+  empty_max_iteration_count:
+    type: do_while
+    body: ${{parent.jobs.empty_max_iteration_body}}
+    condition: is_number_larger_than_zero
+    mapping:
+      output_in_number:
+        - job_in_number
+        - job_in_number_1
+      output_in_path: job_in_path
+
   invalid_max_iteration_body:
     type: pipeline
     inputs:
