--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_node_output_name_version.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_node_output_name_version.yaml
@@ -11,7 +11,7 @@ jobs:
     outputs:
       component_out_path:
         name: node_output
-        version: '1'
+        version: 1
 outputs:
   pipeline_out_path:
     type: uri_folder
