--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_pipeline_output_name_version.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_pipeline_output_name_version.yaml
@@ -12,6 +12,6 @@ outputs:
   component_out_path:
     type: mltable
     name: pipeline_output
-    version: '1'
+    version: 1
 settings:
   default_compute: azureml:cpu-cluster
