--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_pipeline_output_with_invalid_name.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_pipeline_output_with_invalid_name.yaml
@@ -11,7 +11,7 @@ jobs:
 outputs:
   component_out_path:
     type: mltable
-    # name: pipeline_output
+    name: pipeline_output@
     version: 1
 settings:
   default_compute: azureml:cpu-cluster
