--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_pipeline_and_node_binding_output.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_pipeline_and_node_binding_output.yaml
@@ -1,4 +1,4 @@
-display_name: register_pipeline_output
+display_name: register_both_output
 type: pipeline
 jobs:
   parallel_body:
@@ -8,10 +8,15 @@ jobs:
         type: uri_file
         path: https://dprepdata.blob.core.windows.net/demo/Titanic.csv
     component: ../components/helloworld_component.yml
+    outputs:
+      component_out_path:
+        path: ${{parent.outputs.pipeline_out_path}}
+        name: node_output
+        version: 1
 outputs:
-  component_out_path:
-    type: mltable
-    # name: pipeline_output
-    version: 1
+  pipeline_out_path:
+    type: uri_folder
+    name: pipeline_output
+    version: 2
 settings:
   default_compute: azureml:cpu-cluster
