--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_pipeline_and_node_output.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_register_pipeline_and_node_output.yaml
@@ -11,11 +11,11 @@ jobs:
     outputs:
       component_out_path:
         name: node_output
-        version: '1'
+        version: 1
 outputs:
   pipeline_out_path:
     type: uri_folder
     name: pipeline_output
-    version: '2'
+    version: 2
 settings:
   default_compute: azureml:cpu-cluster
