[ML] Add Jobservice subtypes for Ssh, VsCode,  TensorBoard, and  JupyterLab  (#28397)
* [ML] WIP: Polymorphic Jobservice - TODO: Pending Cleanup/Testing/UTs/E2E

--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_with_node_services_with_properties.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/helloworld_pipeline_job_with_node_services_with_properties.yml
@@ -20,11 +20,14 @@ jobs:
     services:
       "my_ssh":
         job_service_type: "ssh"
-        ssh_public_keys: "xyz123"
+        properties:
+          sshPublicKeys: "xyz123"
       "my_tensorboard":
         job_service_type: "tensor_board"
-        log_dir: "~/tblog" # where you want to store the tensor_board output
+        properties:
+          logDir: "~/tblog" # where you want to store the tensor_board output
       "my_jupyterlab":
         job_service_type: "jupyter_lab"
       "my_vscode":
         job_service_type: "vs_code"
+
