--- a/eng/pipelines/templates/jobs/perf.yml
+++ b/eng/pipelines/templates/jobs/perf.yml
@@ -1,4 +1,7 @@
 parameters:
+- name: LanguageVersion
+  type: string
+  default: '3.11'
 - name: ServiceDirectory
   type: string
   default: ''
@@ -30,8 +33,9 @@ extends:
     Variables:
     - template: /eng/pipelines/templates/variables/globals.yml
     - name: PythonVersion
-      value: '3.11'
+      value: ${{ parameters.LanguageVersion }}
     Language: Python
+    LanguageVersion: ${{ parameters.LanguageVersion }}
     InstallLanguageSteps:
     - task: UsePythonVersion@0
       displayName: "Use Python $(PythonVersion)"
