--- a/sdk/storage/azure-storage-blob/perf.yml
+++ b/sdk/storage/azure-storage-blob/perf.yml
@@ -1,4 +1,7 @@
 parameters:
+- name: LanguageVersion
+  type: string
+  default: '3.11'
 - name: PackageVersions
   displayName: PackageVersions (regex of package versions to run)
   type: string
@@ -24,6 +27,7 @@ extends:
   template: /eng/pipelines/templates/jobs/perf.yml
   parameters:
     ServiceDirectory: storage/azure-storage-blob
+    LanguageVersion: ${{ parameters.LanguageVersion }}
     PackageVersions: ${{ parameters.PackageVersions }}
     Tests: ${{ parameters.Tests }}
     Arguments: ${{ parameters.Arguments }}
