add back base deps

--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -148,6 +148,7 @@ setenv =
   {[testenv]setenv}
   PROXY_URL=http://localhost:5019
 deps =
+  {[base]deps}
   pyright==1.1.287
 commands =
     {envbindir}/python {toxinidir}/../../../eng/tox/create_package_and_install.py \
