let tox install the package

--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -151,6 +151,11 @@ deps =
   {[base]deps}
   pyright==1.1.287
 commands =
+    {envbindir}/python {toxinidir}/../../../eng/tox/create_package_and_install.py \
+      -d {distdir} \
+      -p {toxinidir} \
+      -w {envtmpdir} \
+      --package-type sdist
     {envbindir}/python {toxinidir}/../../../eng/tox/run_verifytypes.py -t {toxinidir}
 
 
