--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -93,8 +93,12 @@ jobs:
         ServiceDirectory: "template"
         TestPipeline: ${{ parameters.TestPipeline }}
 
+    - pwsh: |
+        python -m pip install "tools/azure-sdk-tools[build]"
+      displayName: Install build tooling
+
     - task: PythonScript@0
-      displayName: 'Set Tox Environment'
+      displayName: 'Set Tox Environment and Skips'
       inputs:
         scriptPath: 'scripts/devops_tasks/set_tox_environment.py'
         arguments: >-
