don't install azure-core via editable install from dev reqs for verifytypes

--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -148,7 +148,9 @@ setenv =
   {[testenv]setenv}
   PROXY_URL=http://localhost:5019
 deps =
-  {[base]deps}
+  -r ../../../eng/test_tools.txt
+  -e ../../../tools/azure-sdk-tools
+  -e ../../../tools/azure-devtools
   pyright==1.1.287
 commands =
     {envbindir}/python {toxinidir}/../../../eng/tox/create_package_and_install.py \
