make same change for pyright so we aren't mixing whl/sdist install with editable install when running locally

--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -129,7 +129,9 @@ setenv =
   {[testenv]setenv}
   PROXY_URL=http://localhost:5018
 deps =
-  {[base]deps}
+  -r ../../../eng/test_tools.txt
+  -e ../../../tools/azure-sdk-tools
+  -e ../../../tools/azure-devtools
   pyright==1.1.287
 commands =
     {envbindir}/python {toxinidir}/../../../eng/tox/create_package_and_install.py \
