--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/data_transfer/copy_uri_files.yaml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/data_transfer/copy_uri_files.yaml
@@ -6,19 +6,19 @@ settings:
   default_compute: azureml:adftest
 inputs:
   cosmos_folder:
-    type: uri_folder
-    path: azureml://locations/centraluseuap/workspaces/80eaba04-c6ec-4775-8ddc-d538e9642c2d/data/dtv2_asset_uriFolder/versions/1
+    type: uri_file
+    path: azureml://locations/centraluseuap/workspaces/80eaba04-c6ec-4775-8ddc-d538e9642c2d/data/dtv2_asset_uriFile/versions/1
 
 outputs:
   merged_blob:
-    type: uri_folder
-    path: azureml://datastores/workspaceblobstore/paths/azureml/dtv2_dest/
+    type: uri_file
+    path: azureml://datastores/testadlsgen2datastore/paths/dtv2_parquet_dest/my.parquet
 
 jobs:
     copy_files:
       type: data_transfer
       task: copy_data
-      component: ../../components/data_transfer/copy_files.yaml
+      component: ../../components/data_transfer/copy_uri_files.yaml
       inputs:
         folder1: ${{parent.inputs.cosmos_folder}}
       outputs:
