--- a/sdk/storage/azure-storage-blob/perf-tests.yml
+++ b/sdk/storage/azure-storage-blob/perf-tests.yml
@@ -13,9 +13,7 @@ PackageVersions:
 Tests:
 - Test: download
   Class: DownloadTest
-  Arguments:
-  # TODO: Remove before merging
-  - --size 1 --warmup 0 --duration 1
+  Arguments: &sizes
   - --size 10240 --parallel 64
   - --size 10485760 --parallel 32
   - --size 1073741824 --parallel 1 --warmup 60 --duration 60
@@ -23,19 +21,11 @@ Tests:
 
 - Test: upload
   Class: UploadTest
-  Arguments:
-  # TODO: Remove before merging
-  - --size 1 --warmup 0 --duration 1
-  - --size 10240 --parallel 64
-  - --size 10485760 --parallel 32
-  - --size 1073741824 --parallel 1 --warmup 60 --duration 60
-  - --size 1073741824 --parallel 8 --warmup 60 --duration 60
+  Arguments: *sizes
 
 - Test: list-blobs
   Class: ListBlobsTest
   Arguments:
-  # TODO: Remove before merging
-  - --count 1 --warmup 0 --duration 1
   - --count 5 --parallel 64
   - --count 500 --parallel 32
   - --count 50000 --parallel 32 --warmup 60 --duration 60
