--- a/sdk/ml/azure-ai-ml/tests/test_configs/dsl_pipeline/data_transfer_job_in_pipeline/copy_data/pipeline.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/dsl_pipeline/data_transfer_job_in_pipeline/copy_data/pipeline.yml
@@ -7,15 +7,14 @@ settings:
 inputs:
   cosmos_folder:
     type: uri_folder
-    path: azureml://locations/centraluseuap/workspaces/80eaba04-c6ec-4775-8ddc-d538e9642c2d/data/dtv2_test_adlsgen1_folder/versions/1
+    path: ./data/iris_model
   cosmos_folder_dup:
     type: uri_folder
-    path: azureml://locations/centraluseuap/workspaces/80eaba04-c6ec-4775-8ddc-d538e9642c2d/data/dtv2_test_gen2_folder/versions/1
+    path: ./data/iris_model
 
 outputs:
   merged_blob:
     type: uri_folder
-    path: azureml://datastores/workspaceblobstore/paths/azureml/dtv2_merge_dest/
 
 jobs:
     merge_files:
